tests/errors/sem2.kt
var x: Int = 3.14; // mismatch (Int vs Double)